tests/typecheck/pass/bv_simple_index_l.sail
function bit[1] bv ((bit[64]) x) =
{
  x[0]
}
