tests/typecheck/fail/bv_simple_index1.sail
function bool bv ((bit[64]) x) =
{
  x[-1]
}
